updated navbar styling t correct alignment

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -112,7 +112,8 @@ a:hover, a:focus {
 }
 
 .navbar-title {
-  margin-top: 12px;
+  margin-top: 15px;
+  font-size: 30px
 }
 
 .navbar {
@@ -123,8 +124,8 @@ a:hover, a:focus {
 .logout-button {
   font-size: 14px;
   float: right;
-  margin-top: 10px;
-  margin-right: 10px;
+  margin-top: 21px;
+  margin-right: 15px;
   background-color: #46b19f;
   color: #ffffff;
   cursor: pointer;
@@ -405,6 +406,12 @@ li {
 /* Smartphones (portrait and landscape) ----------- */
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
 /* Styles */
+
+  .menu-icon-mobile {
+    margin-left: 20px;
+  }
+
+
 
   .added-to-list {
     background-color: #46b19f;
